# Neobis_Cinematica

./: .env.example  Makefile  pyproject.toml  requirements.txt
applications/account/: apps.py  models.py
applications/account/migrations/: 0001_initial.py  0002_customuser_card_balance_customuser_card_number.py  0002_customuser_is_admin.py
applications/cinemas/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
applications/cinemas/migrations/: 0001_initial.py  0002_alter_cinema_options_cinema_owner.py
applications/feedback/: models.py  serializers.py  services.py
applications/feedback/migrations/: 0001_initial.py
applications/movies/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
applications/movies/migrations/: 0001_initial.py  0002_movie_owner.py  0003_alter_movie_cinema_alter_movie_owner.py
applications/rooms/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
applications/rooms/migrations/: 0001_initial.py  0002_seat_owner.py
applications/tickets/: apps.py  models.py  serializers.py  urls.py  views.py
applications/tickets/migrations/: 0001_initial.py  0002_remove_ticket_amount.py  0003_ticket_ticket_type.py
config/: settings.py  urls.py
